--- a/styles/HomePage.module.scss
+++ b/styles/HomePage.module.scss
@@ -4,7 +4,7 @@
 .grid {
   border-radius: 5px;
   display: grid;
-  grid-gap: 15px;
+  grid-gap: 0.75em;
   margin: auto;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -46,7 +46,7 @@
   padding: 15px;
   border: 5px solid transparent;
   border-radius: 5px;
-  margin-left: 1em;
+  margin-left: 0.75em;
   &:hover {
     background-color: colors.$light-green-transparent;
   }
