Add coordinates for various places

--- a/styles/HomePage.module.scss
+++ b/styles/HomePage.module.scss
@@ -176,7 +176,7 @@
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  li {
+  &__marker {
     display: block;
     position: absolute;
     width: 2rem;
