--- a/styles/HomePage.module.scss
+++ b/styles/HomePage.module.scss
@@ -38,6 +38,8 @@
   font-size: 50px;
   @media (max-width: 768px) {
     grid-area: 1/1/2/2;
+    margin-left: 1em;
+    margin-right: 1em;
   }
 }
 .header__button {
@@ -69,6 +71,11 @@
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
+  @media (max-width: 768px) {
+    margin-left: 1em;
+    margin-right: 1em;
+    padding: 1em;
+  }
   &--1 {
     @extend .grid__item;
     grid-area: 2/1/3/2;
@@ -123,6 +130,10 @@
     padding: 1em;
     @media (max-width: 768px) {
       grid-area: 2/1/3/2;
+      background-color: #fff0;
+      backdrop-filter: none;
+      -webkit-backdrop-filter: none;
+      padding: none;
     }
   }
   p {
@@ -139,16 +150,6 @@
   border-radius: 5px;
   padding-top: 1em;
   padding-bottom: 1em;
-}
-
-.map__ambleside {
-  display: block;
-  position: absolute;
-  transform: translateX(7rem);
-  transform: translateY(5rem);
-  color: red;
-  background: wheat;
-  width: auto;
 }
 
 /* ===== Pins on the map ===== */
